add_ticket_number_and_service
