# docs/swagger.json
@@ -347,6 +347,23 @@
                         "name": "officeId",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "enum": [
+                            "кредит",
+                            "карта",
+                            "ипотека",
+                            "автокредит",
+                            "вклад и счет",
+                            "платежи и переводы",
+                            "страхование",
+                            "другие услуги"
+                        ],
+                        "type": "string",
+                        "description": "Filter by services",
+                        "name": "service",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -582,8 +599,14 @@
                 "id": {
                     "type": "integer"
                 },
-                "office": {
-                    "$ref": "#/definitions/models.Office"
+                "number": {
+                    "type": "string"
+                },
+                "officeId": {
+                    "type": "integer"
+                },
+                "service": {
+                    "type": "string"
                 },
                 "userId": {
                     "type": "integer"
