# internal/app/models/ticket.go
@@ -1,6 +1,7 @@
 package models
 
 import (
+	"commune_backend/internal/app/utils"
 	"gorm.io/gorm"
 	"time"
 )
@@ -10,7 +11,17 @@ type Ticket struct {
 	CreatedAt time.Time      `json:"createdAt"`
 	UpdatedAt time.Time      `json:"-"`
 	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"`
-	OfficeId  int64          `json:"-"`
-	Office    Office         `json:"office"`
+	OfficeId  int64          `json:"officeId"`
 	UserId    int64          `json:"userId"`
+	Number    string         `json:"number"`
+	Service   string         `json:"service"`
+}
+
+func NewTicket(officeId, userId int64, service string) *Ticket {
+	return &Ticket{
+		OfficeId: officeId,
+		UserId:   userId,
+		Number:   utils.GenerateTicketNumber(),
+		Service:  service,
+	}
 }
